# directx-playground

./: .gitignore  CMakeLists.txt  vcpkg.json
d2d/01_hello_world/: Application.cpp
d2d/02_device_context/: Application.cpp  Application.h
d2d/05_linear_pattern/: Application.cpp
d3d/01_hello_world/: CMakeLists.txt  D3DEngine.cpp  D3DEngine.h
d3d/02_debug_layer/: CMakeLists.txt
d3d/03_adapter/: CMakeLists.txt  D3DEngine.cpp
d3d/05_swap_chain/: CMakeLists.txt
d3d/06_swap_chain/: D3DEngine.cpp  D3DEngine.h
d3d/07_present/: D3DEngine.cpp  D3DEngine.h
d3d/08_custom_debug/: CMakeLists.txt  Debug.cpp  Debug.h
d3d/09_vertex_buffer/: CMakeLists.txt  D3DEngine.h
d3d/10_shaders/: CMakeLists.txt  D3DEngine.cpp  D3DEngine.h
d3d/11_pipeline/: D3DEngine.cpp  D3DEngine.h
d3d/13_constant_buffer/: CMakeLists.txt
d3d/13_descriptor/: D3DEngine.cpp  D3DEngine.h  shader.hlsl
d3d/14_load_texture/: CMakeLists.txt
d3d/16_default_heap/: D3DEngine.cpp  D3DEngine.h
d3d/17_more_default/: D3DEngine.cpp  D3DEngine.h
d3d/19_resize_window/: CMakeLists.txt
d3d/20_load_model/: CMakeLists.txt  D3DEngine.cpp  D3DEngine.h
d3d/21_transform_matrix/: D3DEngine.cpp  D3DEngine.h  shader.hlsl
d3d/22_lighting/: D3DEngine.cpp  D3DEngine.h
d3d/22_multi_path/: CMakeLists.txt  D3DEngine.cpp  D3DEngine.h  shader.hlsl
d3d/23_refactor/: CMakeLists.txt
d3d/24_multi_path/: CMakeLists.txt  D3DEngine.h  Model.cpp  Model.h  outline.hlsl
d3d/25_offscreen/: CMakeLists.txt  D3DEngine.cpp  D3DEngine.h
d3d/26_offscreen_vertex_id/: D3DEngine.cpp
d3d/27_multi_render_target/: CMakeLists.txt  D3DEngine.h
d3d/28_msaa/: D3DEngine.cpp
d3d/29_instancing/: Model.cpp  Model.h  shader.hlsl
d3d/30_d3d12ma/: CMakeLists.txt
d3d/31_compute_shader/: CMakeLists.txt  D3DEngine.cpp  D3DEngine.h
d3d/32_dxr_init/: CMakeLists.txt  D3DEngine.cpp  D3DEngine.h  shader.hlsl
d3d/33_dxr_instance/: D3DEngine.cpp  D3DEngine.h  shader.hlsl
d3d/34_dxr_model/: CMakeLists.txt  D3DEngine.cpp  D3DEngine.h  Model.cpp  Model.h  shader.hlsl
dwrite/01_list_system_fonts/: CMakeLists.txt  main.cpp
win32/03_list_system_fonts/: main.cpp
