cmake_minimum_required(VERSION 3.30)
project(Win32D2DExamples)

add_subdirectory(win32/01_hello_world)
add_subdirectory(win32/02_split_class)

add_subdirectory(d2d/01_hello_world)
add_subdirectory(d2d/02_device_context)
add_subdirectory(d2d/03_draw_primitive_geometry)

add_subdirectory(d3d/01_hello_world)
add_subdirectory(d3d/02_debug_layer)
add_subdirectory(d3d/03_adapter)
add_subdirectory(d3d/04_create_device)
add_subdirectory(d3d/05_command_queue)
add_subdirectory(d3d/06_swap_chain)
add_subdirectory(d3d/07_present)
add_subdirectory(d3d/08_custom_debug)
add_subdirectory(d3d/09_vertex_buffer)
add_subdirectory(d3d/10_shaders)
add_subdirectory(d3d/11_pipeline)